[##173119697] add ADE bonus api specs (#13)
